Core layer has been created

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 /.vs/ThreadInMotion/v17/.suo
 /.vs/ThreadInMotion/v17/DocumentLayout.json
+/.vs/ThreadInMotion/FileContentIndex/f4f0d5e8-1d23-4d0f-8ba3-a4381d1e4703.vsidx
+/ThreadInMotion.Core/bin/Debug/net8.0/ThreadInMotion.Core.deps.json
+/ThreadInMotion.Core/bin/Debug/net8.0/ThreadInMotion.Core.dll
+/ThreadInMotion.Core/bin/Debug/net8.0/ThreadInMotion.Core.pdb
+/ThreadInMotion.Core/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/ThreadInMotion.Core/obj/Debug/net8.0/ref/ThreadInMotion.Core.dll
+/ThreadInMotion.Core/obj/Debug/net8.0/refint/ThreadInMotion.Core.dll
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.AssemblyInfo.cs
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.AssemblyInfoInputs.cache
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.assets.cache
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.csproj.CoreCompileInputs.cache
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.csproj.FileListAbsolute.txt
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.dll
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.GeneratedMSBuildEditorConfig.editorconfig
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.GlobalUsings.g.cs
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.pdb
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.sourcelink.json
+/ThreadInMotion.Core/obj/project.assets.json
+/ThreadInMotion.Core/obj/project.nuget.cache
+/ThreadInMotion.Core/obj/ThreadInMotion.Core.csproj.nuget.dgspec.json
+/ThreadInMotion.Core/obj/ThreadInMotion.Core.csproj.nuget.g.props
+/ThreadInMotion.Core/obj/ThreadInMotion.Core.csproj.nuget.g.targets
