DataAccess, Service layers have been created

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,57 @@
 /ThreadInMotion.Core/obj/ThreadInMotion.Core.csproj.nuget.dgspec.json
 /ThreadInMotion.Core/obj/ThreadInMotion.Core.csproj.nuget.g.props
 /ThreadInMotion.Core/obj/ThreadInMotion.Core.csproj.nuget.g.targets
+/.vs/ThreadInMotion/FileContentIndex/85d8b1d0-5b67-4673-8a49-0c597ce00bd2.vsidx
+/.vs/ThreadInMotion/FileContentIndex/9eb8ba34-a6e1-416f-9d5e-cc90196a26e8.vsidx
+/ThreadInMotion.DataAccess/bin/Debug/net8.0/ThreadInMotion.Core.dll
+/ThreadInMotion.DataAccess/bin/Debug/net8.0/ThreadInMotion.Core.pdb
+/ThreadInMotion.DataAccess/bin/Debug/net8.0/ThreadInMotion.DataAccess.deps.json
+/ThreadInMotion.DataAccess/bin/Debug/net8.0/ThreadInMotion.DataAccess.dll
+/ThreadInMotion.DataAccess/bin/Debug/net8.0/ThreadInMotion.DataAccess.pdb
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ref/ThreadInMotion.DataAccess.dll
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/refint/ThreadInMotion.DataAccess.dll
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadIn.74FA7059.Up2Date
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.AssemblyInfo.cs
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.AssemblyInfoInputs.cache
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.assets.cache
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.csproj.AssemblyReference.cache
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.csproj.CoreCompileInputs.cache
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.csproj.FileListAbsolute.txt
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.dll
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.GeneratedMSBuildEditorConfig.editorconfig
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.GlobalUsings.g.cs
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.pdb
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.sourcelink.json
+/ThreadInMotion.DataAccess/obj/project.assets.json
+/ThreadInMotion.DataAccess/obj/project.nuget.cache
+/ThreadInMotion.DataAccess/obj/ThreadInMotion.DataAccess.csproj.nuget.dgspec.json
+/ThreadInMotion.DataAccess/obj/ThreadInMotion.DataAccess.csproj.nuget.g.props
+/ThreadInMotion.DataAccess/obj/ThreadInMotion.DataAccess.csproj.nuget.g.targets
+/ThreadInMotion.Service/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/ThreadInMotion.Service/obj/Debug/net8.0/ref/ThreadInMotion.Service.dll
+/ThreadInMotion.Service/obj/Debug/net8.0/refint/ThreadInMotion.Service.dll
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadIn.D917F012.Up2Date
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.AssemblyInfo.cs
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.AssemblyInfoInputs.cache
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.assets.cache
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.csproj.AssemblyReference.cache
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.csproj.CoreCompileInputs.cache
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.csproj.FileListAbsolute.txt
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.dll
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.GeneratedMSBuildEditorConfig.editorconfig
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.GlobalUsings.g.cs
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.pdb
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.sourcelink.json
+/ThreadInMotion.Service/obj/project.assets.json
+/ThreadInMotion.Service/obj/project.nuget.cache
+/ThreadInMotion.Service/obj/ThreadInMotion.Service.csproj.nuget.dgspec.json
+/ThreadInMotion.Service/obj/ThreadInMotion.Service.csproj.nuget.g.props
+/ThreadInMotion.Service/obj/ThreadInMotion.Service.csproj.nuget.g.targets
+/ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.Core.dll
+/ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.Core.pdb
+/ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.DataAccess.dll
+/ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.DataAccess.pdb
+/ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.Service.deps.json
+/ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.Service.dll
+/ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.Service.pdb
