Presentation layer has been created

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,54 @@
 /ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.Service.deps.json
 /ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.Service.dll
 /ThreadInMotion.Service/bin/Debug/net8.0/ThreadInMotion.Service.pdb
+/.vs/ThreadInMotion/DesignTimeBuild/.dtbcache.v2
+/.vs/ThreadInMotion/FileContentIndex/e261c869-94a2-46d1-9ac1-83b8c2581562.vsidx
+/ThreadInMotion.Presentation/bin/Debug/net8.0/appsettings.Development.json
+/ThreadInMotion.Presentation/bin/Debug/net8.0/appsettings.json
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Core.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Core.pdb
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.DataAccess.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.DataAccess.pdb
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Presentation.deps.json
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Presentation.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Presentation.exe
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Presentation.pdb
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Presentation.runtimeconfig.json
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Presentation.staticwebassets.runtime.json
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Service.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.Service.pdb
+/ThreadInMotion.Presentation/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/ThreadInMotion.Presentation/obj/Debug/net8.0/apphost.exe
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ref/ThreadInMotion.Presentation.dll
+/ThreadInMotion.Presentation/obj/Debug/net8.0/refint/ThreadInMotion.Presentation.dll
+/ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/bundle/ThreadInMotion.Presentation.styles.css
+/ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/projectbundle/ThreadInMotion.Presentation.bundle.scp.css
+/ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/Views/Shared/_Layout.cshtml.rz.scp.css
+/ThreadInMotion.Presentation/obj/Debug/net8.0/staticwebassets.build.json
+/ThreadInMotion.Presentation/obj/Debug/net8.0/staticwebassets.development.json
+/ThreadInMotion.Presentation/obj/Debug/net8.0/staticwebassets.pack.json
+/ThreadInMotion.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.build.ThreadInMotion.Presentation.props
+/ThreadInMotion.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.buildMultiTargeting.ThreadInMotion.Presentation.props
+/ThreadInMotion.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.ThreadInMotion.Presentation.props
+/ThreadInMotion.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.ThreadInMotion.Presentation.Microsoft.AspNetCore.StaticWebAssets.props
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadIn.41474581.Up2Date
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.AssemblyInfo.cs
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.AssemblyInfoInputs.cache
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.assets.cache
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.csproj.AssemblyReference.cache
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.csproj.CoreCompileInputs.cache
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.csproj.FileListAbsolute.txt
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.dll
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.GeneratedMSBuildEditorConfig.editorconfig
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.genruntimeconfig.cache
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.GlobalUsings.g.cs
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.MvcApplicationPartsAssemblyInfo.cache
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.pdb
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.RazorAssemblyInfo.cache
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.RazorAssemblyInfo.cs
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.sourcelink.json
+/ThreadInMotion.Presentation/obj/project.assets.json
+/ThreadInMotion.Presentation/obj/project.nuget.cache
+/ThreadInMotion.Presentation/obj/ThreadInMotion.Presentation.csproj.nuget.dgspec.json
+/ThreadInMotion.Presentation/obj/ThreadInMotion.Presentation.csproj.nuget.g.props
+/ThreadInMotion.Presentation/obj/ThreadInMotion.Presentation.csproj.nuget.g.targets
