LoginManager, Dependency Injection pattern has been added to project

--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,23 @@
 /.vs/ThreadInMotion/FileContentIndex/e806f331-a425-42da-ba71-47d89eac6e29.vsidx
 /ThreadInMotion.Presentation/obj/Debug/net8.0/ApiEndpoints.json
 /.vs/ThreadInMotion/config/applicationhost.config
+/.vs/ThreadInMotion/FileContentIndex/08f3931c-e787-4d70-a876-51691eb0f016.vsidx
+/.vs/ThreadInMotion/FileContentIndex/7253fdb9-c8ec-4d7a-a9bb-e8242359331c.vsidx
+/.vs/ThreadInMotion/FileContentIndex/855e7ad0-e8b5-488e-847d-160f84eec8b7.vsidx
+/.vs/ThreadInMotion/FileContentIndex/8bac7eac-948d-45b5-b1a6-d86283b8024e.vsidx
+/ThreadInMotion.Presentation/bin/Debug/net8.0/Microsoft.AspNetCore.JsonPatch.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/Microsoft.AspNetCore.Mvc.NewtonsoftJson.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/Microsoft.OpenApi.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/Newtonsoft.Json.Bson.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/Pipelines.Sockets.Unofficial.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/runtimes/win/lib/netcoreapp2.0/System.Diagnostics.PerformanceCounter.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/StackExchange.Redis.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/Swashbuckle.AspNetCore.Swagger.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerGen.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerUI.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/System.Diagnostics.PerformanceCounter.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/ThreadInMotion.SmartGlove.Sdk.dll
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.MvcApplicationPartsAssemblyInfo.cs
+/ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.csproj.BuildWithSkipAnalyzers
+/.vs/ThreadInMotion/FileContentIndex/a0d84fcf-2592-456f-a219-ea20ec466714.vsidx
+/.vs/ThreadInMotion/FileContentIndex/f31c104a-aea5-4534-a2d2-0910187d6632.vsidx
