--- a/ThreadInMotion.Service/ThreadInMotion.Service.csproj
+++ b/ThreadInMotion.Service/ThreadInMotion.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ThreadInMotion.SmartGlove.Sdk" Version="1.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ThreadInMotion.DataAccess\ThreadInMotion.DataAccess.csproj" />
   </ItemGroup>
 
