RestSharp library has been added into project. Created Login restapi

--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,14 @@
 /ThreadInMotion.Service/obj/Debug/net8.0/ThreadInMotion.Service.csproj.BuildWithSkipAnalyzers
 /.vs/ThreadInMotion/FileContentIndex/a0d84fcf-2592-456f-a219-ea20ec466714.vsidx
 /.vs/ThreadInMotion/FileContentIndex/f31c104a-aea5-4534-a2d2-0910187d6632.vsidx
+/.vs/ThreadInMotion/FileContentIndex/1f425293-e078-4748-b26e-da580af14b13.vsidx
+/.vs/ThreadInMotion/FileContentIndex/2ef8fdd8-6445-46e5-b8e8-0236aa55f58e.vsidx
+/.vs/ThreadInMotion/FileContentIndex/326b397a-93ac-4f59-8c8e-78676d23610a.vsidx
+/.vs/ThreadInMotion/FileContentIndex/d12f190d-1d68-4fda-8133-a777a44afc1f.vsidx
+/ThreadInMotion.Presentation/obj/Debug/net8.0/project.razor.vs.bin
+/ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/Views/Shared/Layout.cshtml.rz.scp.css
+/ThreadInMotion.Presentation/obj/Debug/net8.0/ThreadInMotion.Presentation.csproj.BuildWithSkipAnalyzers
+/ThreadInMotion.Presentation/bin/Debug/net8.0/RestSharp.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/RestSharp.Serializers.Newtonsoft.Json.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/RestSharp.Serializers.NewtonsoftJson.dll
+/ThreadInMotion.Presentation/bin/Debug/net8.0/RestSharp.Serializers.SystemTextJson.dll
