--- a/ThreadInMotion.Presentation/appsettings.json
+++ b/ThreadInMotion.Presentation/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "RestSettings": {
+    "Path": "http://localhost:5157/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
