Areas have been created in the project and started development process of Api, Subscription area

--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,16 @@
 /ThreadInMotion.Presentation/bin/Debug/net8.0/RestSharp.Serializers.Newtonsoft.Json.dll
 /ThreadInMotion.Presentation/bin/Debug/net8.0/RestSharp.Serializers.NewtonsoftJson.dll
 /ThreadInMotion.Presentation/bin/Debug/net8.0/RestSharp.Serializers.SystemTextJson.dll
+/.vs/ProjectEvaluation/threadinmotion.metadata.v7.bin
+/.vs/ProjectEvaluation/threadinmotion.projects.v7.bin
+/.vs/ThreadInMotion/FileContentIndex/19e86129-826f-421c-a11f-9c296df85c7f.vsidx
+/.vs/ThreadInMotion/FileContentIndex/26bc4117-0a5a-4b96-a64c-9e2854f2c948.vsidx
+/.vs/ThreadInMotion/FileContentIndex/31284cd5-8454-498f-aaa9-988c443051b7.vsidx
+/.vs/ThreadInMotion/FileContentIndex/4f0d453a-c417-4909-9bf6-1aa5b178ba16.vsidx
+/.vs/ThreadInMotion/FileContentIndex/c392bf75-5d18-4ea2-ac20-fbc27a2be207.vsidx
+/.vs/ThreadInMotion/v17/.futdcache.v2
+/.vs/ThreadInMotion/v17/fileList.bin
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.csproj.AssemblyReference.cache
+/ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.csproj.BuildWithSkipAnalyzers
+/ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.csproj.BuildWithSkipAnalyzers
+/ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/Areas/Subscription/Views/Shared/Layout.cshtml.rz.scp.css
