pages and layout has been created

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,8 @@
 /ThreadInMotion.Core/obj/Debug/net8.0/ThreadInMotion.Core.csproj.BuildWithSkipAnalyzers
 /ThreadInMotion.DataAccess/obj/Debug/net8.0/ThreadInMotion.DataAccess.csproj.BuildWithSkipAnalyzers
 /ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/Areas/Subscription/Views/Shared/Layout.cshtml.rz.scp.css
+/.vs/ThreadInMotion/FileContentIndex/4816e427-b9db-433b-8792-13505dd2093e.vsidx
+/.vs/ThreadInMotion/FileContentIndex/8a8e2fd0-c684-46bc-a0fd-ce37bb6a71f2.vsidx
+/.vs/ThreadInMotion/FileContentIndex/d63324a6-3c91-42b7-9d08-60e2c0ed2518.vsidx
+/.vs/ThreadInMotion/FileContentIndex/feea4a76-38b9-45bc-9042-310b5ea7d871.vsidx
+/ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/Areas/User/Views/Shared/Layout.cshtml.rz.scp.css
