--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,4 @@
 /.vs/ThreadInMotion/FileContentIndex/d63324a6-3c91-42b7-9d08-60e2c0ed2518.vsidx
 /.vs/ThreadInMotion/FileContentIndex/feea4a76-38b9-45bc-9042-310b5ea7d871.vsidx
 /ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/Areas/User/Views/Shared/Layout.cshtml.rz.scp.css
+/.vs/ThreadInMotion/FileContentIndex/e95103af-b9cf-46bd-a9f6-0a498d8bfedb.vsidx
