--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@
 /.vs/ThreadInMotion/FileContentIndex/feea4a76-38b9-45bc-9042-310b5ea7d871.vsidx
 /ThreadInMotion.Presentation/obj/Debug/net8.0/scopedcss/Areas/User/Views/Shared/Layout.cshtml.rz.scp.css
 /.vs/ThreadInMotion/FileContentIndex/e95103af-b9cf-46bd-a9f6-0a498d8bfedb.vsidx
+/.vs/ThreadInMotion/FileContentIndex/a4ca0770-57f3-428d-92dd-699f2f6e6ae5.vsidx
